# Helpdesk-dashboard-for-schools

./: .env.example  .gitignore  Cargo.toml  DEVELOPER_README.md  README.md  tailwind.config.js
assets/css/: tailwind-output.css
assets/js/: freshservice.js  sidebar.js
src/: app.rs  database.rs  main.rs
src/freshservice/menu/database/: custom_notify_save.rs  mod.rs
src/freshservice/menu/files/: custom_notify_upload.rs  mod.rs
src/integrations/: fresh_service_ingest.rs  mod.rs  unfi_ingest.rs  zabbix_ingest.rs
src/misc/: mod.rs
src/misc/freshservice/: notify.rs
src/misc/fs/: notify.rs
src/public/: home.rs
templates/: home.html
