[package]
name = "helpdesk"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.10"
actix-multipart = "0.8.0"
actix-web = "4.14.0"
askama = "0.16.0"
awc = { version = "3.8.2", features = ["rustls"] }
base64 = "0.22.1"
chrono = "0.4.45"
derive_more = "2.1.1"
dotenvy = "0.15.7"
futures-util = "0.3.32"
rodio = { version = "0.22.2", features = ["mp3"] }
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["sqlite"] }
terminal-link = "0.1.0"
tokio = "1.52.3"
url = "2.5.8"
